# acacia

./: .gitignore  .travis.yml  Cargo.toml  README.md  devenv.nix  flake.nix
examples/: gravity.rs
examples/gravity/: Cargo.toml
examples/gravity/src/: main.rs
src/: data_tree.rs  error.rs  iter.rs  lib.rs  ntree.rs  partition.rs  pure_tree.rs  traits.rs  tree.rs  util.rs
src/partition/: boxes.rs  cubemap.rs  interval.rs  mod.rs  ncube.rs  unitquad.rs
tests/: ntree_gravity.rs  tree_gravity.rs
