[package]
name = "acacia"
version = "0.2.0"
authors = ["Emilia Bopp <Emilia.bopp@aepsil0n.de>"]
description = "A spatial partitioning and tree library."
documentation = "https://docs.rs/acacia/"
homepage = "https://github.com/edibopp/acacia"
repository = "https://github.com/edibopp/acacia"
readme = "README.md"
keywords = ["algorithms", "math", "tree", "spatial"]
license = "MPL-2.0"

[profile.test]
debug = false

[features]
arbitrary = ["nalgebra/arbitrary", "quickcheck"]

[dependencies]
nalgebra = "0.28"
itertools = "0.10"
rand = "0.8"
num-traits = "0.2"

[dependencies.quickcheck]
optional = true
version = "1.0"

[dev-dependencies]
approx = "0.5"
quickcheck = "1.0"

[dev-dependencies.nalgebra]
version = "0.28"
features = ["arbitrary"]
