[package]
name = "acacia"
version = "0.2.0"
authors = ["Emilia Bopp <contact@ebopp.de>"]
description = "A spatial partitioning and tree library."
documentation = "https://docs.rs/acacia/"
homepage = "https://github.com/milibopp/acacia"
repository = "https://github.com/milibopp/acacia"
readme = "README.md"
keywords = ["algorithms", "math", "tree", "spatial"]
license = "MPL-2.0"

[profile.test]
debug = false

[features]
arbitrary = ["nalgebra/arbitrary", "quickcheck"]

[dependencies]
nalgebra = "0.29"
itertools = "0.12"
rand = "0.8"
num-traits = "0.2"

[dependencies.quickcheck]
optional = true
version = "1.0"

[dev-dependencies]
approx = "0.5"
quickcheck = "1.0"

[dev-dependencies.nalgebra]
version = "0.29"
features = ["arbitrary"]
